# paddlers-browser-game

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  Paddlers.toml  README.md  Rocket.toml  demo.env  deny.toml  deployment.md  diesel.toml  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml  local.env  release-checklist.md  rustfmt.toml  serve.py  toolchain.toml  update_gql_schema.sh  wait-for-it.sh
db_interface/: Cargo.toml
db_interface/src/: graphql.rs  hooks.rs  main.rs  sql.rs
db_lib/: Cargo.toml
db_lib/src/: lib.rs  models.rs  schema.patch  schema.rs  sql.rs
duck-family-api-lib/: Cargo.toml
duck-family-api-lib/src/: attributes.rs  lib.rs  shop.rs  types.rs
duck-family-db-interface/: Cargo.toml
duck-family-db-interface/src/: graphql.rs  main.rs  sql.rs
duck-family-db-lib/: Cargo.toml
duck-family-db-lib/src/: models.rs  schema.patch  sql.rs
duck-family-frontend/: Cargo.toml
duck-family-frontend/api/: schema.json
duck-family-frontend/api/queries/: attacks_query.graphql  attacks_query.rs  buildings_query.graphql  resources_query.graphql
duck-family-frontend/src/: main.rs  wasm_setup.rs
duck-family-frontend/src/game/: attackers.rs  defenders.rs  fight.rs  input.rs  mod.rs  movement.rs  sprites.rs  town.rs  town_resources.rs
duck-family-frontend/src/gui/: gui_components.rs  input.rs  mod.rs  render.rs  sprites.rs  utils.rs  z.rs
duck-family-frontend/src/net/: ajax.rs  game_master_api.rs  graphql.rs  mod.rs
game_master/: Cargo.toml
game_master/src/: api.rs  attack_spawn.rs  buildings.rs  db.rs  game_master.rs  main.rs  resource_system.rs  shop.rs  town_defence.rs
integration-tests/: Cargo.toml
integration-tests/tests/: game_master_api_types.rs
paddlers-api-lib/: Cargo.toml
paddlers-api-lib/src/: attributes.rs  lib.rs  shop.rs  types.rs
paddlers-db-interface/: Cargo.toml  Dockerfile  debug.Dockerfile
paddlers-db-interface/src/: graphql.rs  hooks.rs  main.rs  sql.rs
paddlers-db-interface/src/graphql/: gql_err.rs  gql_helper_types.rs  gql_private.rs  gql_public.rs
paddlers-db-lib/: Cargo.toml
paddlers-db-lib/src/: lib.rs  models.rs  schema.patch  schema.rs  sql.rs
paddlers-frontend/: Cargo.toml  Dockerfile  Makefile  build.Dockerfile  debug.Dockerfile  local.Cargo.toml  mobile.Dockerfile  update_schema.sh
paddlers-frontend/api/: schema.json
paddlers-frontend/api/queries/: attacks_query.graphql  buildings_query.graphql  buildings_query.rs  hobos_query.graphql  leaderboard_query.graphql  map_query.graphql  player_query.graphql  player_quests_query.graphql  player_villages_query.graphql  reports_query.graphql  resources_query.graphql  unit_tasks_query.graphql  viallage_units_query.graphql  village_units_query.graphql  volatile_village_info_query.graphql  worker_tasks_query.graphql
paddlers-frontend/art/: origin.txt  paddlers-bg.xcf
paddlers-frontend/art/ducks/: export_ducks.sh
paddlers-frontend/benchmarks/: README.md  app_size_stats.sh  app_size_stats.txt  fps.gnuplot  frame_delays.manual.data
paddlers-frontend/nginx/: demo.conf  demo_no_ssl.conf  div.conf  localhost.conf  mime.types  nginx.conf  nologin.conf
paddlers-frontend/src/: error.rs  game.rs  i18n.rs  init.rs  lib.rs  main.js  main.rs  prelude.rs  resolution.rs  view.rs  wasm_setup.rs  web_integration.rs  window.rs
paddlers-frontend/src/game/: abilities.rs  attackers.rs  attacks.rs  buildings.rs  components.rs  defenders.rs  dialogue.rs  fight.rs  forestry.rs  game_event_manager.rs  init.rs  leaderboard.rs  leaderboard_menu.rs  level.rs  mana.rs  map.rs  mod.rs  movement.rs  net_receiver.rs  player_info.rs  quests.rs  religion_frame.rs  shaders.rs  specs_resources.rs  state.rs  status_effects.rs  story.rs  toplevel.rs  town.rs  town_resources.rs  units.rs  visits.rs
paddlers-frontend/src/gui/: animation.rs  decoration.rs  gui_components.rs  input.rs  menu.rs  menu_area.rs  mod.rs  render.rs  shapes.rs  sprites.rs  ui_state.rs  utils.rs  z.rs
paddlers-frontend/src/init/: frame_loading.rs  javascript.js  loading.rs  quicksilver_integration.rs  specs_registration.rs  wasm_setup.rs
paddlers-frontend/src/logging/: error.rs  mod.rs  statistics.js  statistics.rs  text_to_user.rs
paddlers-frontend/src/net/: ajax.rs  authentication.rs  game_master_api.rs  graphql.rs  mod.rs  state.rs  url.rs
paddlers-frontend/src/view/: floating_text.rs  frame.rs  text_node.rs  text_pool.rs
paddlers-frontend/static/: index.html  nologin.index.html  site.webmanifest  style.css
paddlers-frontend/static/js/: main.js  test.js
paddlers-frontend/static/locale/: de.mo  en.mo
paddlers-game-master/: Cargo.toml  Dockerfile  debug.Dockerfile
paddlers-game-master/src/: api.rs  attack_spawn.rs  authentication.rs  buildings.rs  db.rs  game_master.rs  main.rs  resource_system.rs  setup.rs  shop.rs  statistics.rs  town_defence.rs  town_view.rs  worker_actions.rs
paddlers-game-master/src/api/: attacks.rs  hobo.rs  mod.rs  quests.rs  reports.rs  shop.rs  story.rs
paddlers-game-master/src/db/: db_actor.rs  diesel_queries.rs
paddlers-game-master/src/game_master/: attack_funnel.rs  attack_spawn.rs  economy_worker.rs  event.rs  event_queue.rs  mod.rs  story_worker.rs  taxes.rs  town_defence.rs  town_worker.rs
paddlers-game-master/src/setup/: map_generation.rs  new_player.rs  village_creation.rs
paddlers-game-master/src/worker_actions/: worker_abilities.rs  worker_updates.rs
paddlers-shared-lib/: Cargo.toml
paddlers-shared-lib/src/: api.rs  civilization.rs  config.rs  const_list.rs  display.rs  generated.rs  graphql_types.rs  lib.rs  macros.rs  models.rs  prelude.rs  schema.patch  schema.rs  shared_types.rs  specification_types.rs  story.rs  test_data.rs  user_authentication.rs
paddlers-shared-lib/src/api/: abilities.rs  attacks.rs  attributes.rs  error.rs  hobo.rs  keys.rs  mod.rs  quests.rs  reports.rs  shop.rs  statistics.rs  story.rs  tasks.rs
paddlers-shared-lib/src/game_mechanics/: abilities.rs  attributes.rs  (+8 more)
specification-loader/: Cargo.toml
specification-loader/src/: check.rs  gen.rs  main.rs  quest.rs
(+253 files in other folders)
