[workspace]

members = [
    "duck-family-db-interface",
    "duck-family-db-lib",
    "duck-family-api-lib",
    "duck-family-game-master",
    "duck-family-frontend",
    "integration-tests",
]

default-members = [
    "duck-family-db-interface",
    "integration-tests",
]


[profile.dev]
debug = true
