[workspace]

members = [
    "paddlers-db-interface",
    "paddlers-shared-lib",
    "paddlers-game-master",
    "paddlers-frontend",
    "paddle",
    "integration-tests",
    "specification-loader",
    "div-rs",
]

default-members = [
    "paddlers-db-interface",
    "integration-tests",
]


[profile.dev]
debug = true
