[package]
name = "happy_town_backend_db_interface"
version = "0.0.0"
authors = ["Jakob Meier <inbox@jakobmeier.ch>"]
edition = "2018"

[dependencies]
db_lib = { path = "../db_lib"}

rocket = "0.4"
diesel = { version = "1.4", features = ["postgres", "chrono"] }
serde = "1.0"
serde_derive = "1.0"
chrono = "0.4"
juniper = "0.12"
juniper_codegen = "0.12"
juniper_rocket = "0.3"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["diesel_postgres_pool"]