[package]
name = "db_lib"
version = "0.0.1"
authors = ["jakmeier <jakmeier@student.ethz.ch>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
dotenv = "0.14"
chrono = "0.4"
juniper = "0.12"