[package]
name = "duck-family-db-interface"
version = "0.0.3"
authors = ["Jakob Meier <inbox@jakobmeier.ch>"]
edition = "2018"

[dependencies]
duck-family-db-lib = { path = "../duck-family-db-lib"}

rocket = "0.4"
rocket_cors = "0.5"
diesel = { version = "1.4", features = ["postgres", "chrono"] }
serde = "1.0"
serde_derive = "1.0"
chrono = "0.4"
juniper = "0.12"
juniper_codegen = "0.12"
juniper_rocket = "0.3"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["diesel_postgres_pool"]