[package]
name = "duck-family-db-lib"
version = "0.0.2"
authors = ["Jakob Meier <inbox@jakobmeier.ch>"]
edition = "2018"

[dependencies]
duck-family-api-lib = { path = "../duck-family-api-lib" }

diesel = { version = "1.4", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
dotenv = "0.14"
chrono = "0.4"

# For deriving
juniper = "0.12"
strum = "0.15.0"
strum_macros = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
