[package]
name = "paddlers-db-lib"
version = "0.1.0"
authors = ["Jakob Meier <inbox@jakobmeier.ch>"]
edition = "2018"

[dependencies]
paddlers-api-lib = { path = "../paddlers-api-lib" }

diesel = { version = "1.4", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
dotenv = "0.14"
chrono = "0.4"

# For deriving
juniper = "0.12"
strum = "0.15.0"
strum_macros = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
