[package]
name = "paddlers-db-lib"
version = "0.1.0"
authors = ["Jakob Meier <inbox@jakobmeier.ch>"]
edition = "2018"

[dependencies]
paddlers-api-lib = { path = "../paddlers-api-lib" }

diesel = { version = "1.4", features = ["postgres", "chrono"], optional = true }
diesel-derive-enum = { version = "0.4", features = ["postgres"], optional = true }
dotenv = { version = "0.14", optional = true }
chrono = "0.4"

# For deriving
juniper = { version = "0.12", optional = true }
strum = "0.15.0"
strum_macros = "0.15.0"
serde = "1.0"
serde_derive = "1.0"

[features]
graphql = ["juniper"]
sql_db = ["diesel", "diesel-derive-enum", "dotenv"]
default = []
