[package]
name = "paddlers-frontend"
version = "0.1.3"
authors = ["Jakob Meier <inbox@jakobmeier.ch>"]
edition = "2018"
license = "MIT/Apache-2.0"
categories = ["wasm", "game"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
paddlers-shared-lib = { path = "../paddlers-shared-lib", features = ["enum_utils", "game_mechanics", "web"] }
div = {path = "../div-rs" }
nuts = { path = "../nuts", features = ["web-debug"] }
paddle = { path = "../paddle", features = ["const_fn"] }
specs = { version = "0.16.1", default-features = false } # parallel not supported in wasm
shred = { version = "0.10.2", default-features = false }
specs-derive = "0.4"
graphql_client = "0.9"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
strum = { version = "0.18" }
strum_macros = { version = "0.18" }
chrono = "0.4"
pathfinding = "2.0.4"
url = "2.1.1"
statistical = { version = "1.0", optional = true }
gettext = "0.4"
lyon = { version = "0.13", features = ["extra"] }
wasm-bindgen-futures = "0.4.19"
js-sys = "0.3.46"
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"]  }

[dependencies.web-sys]
version = "0.3"
features = [
    "CssStyleDeclaration",
    "Document",
    "DomRect",
    "Element",
    "Headers",
    "HtmlCollection",
    "HtmlElement",
    "HtmlImageElement",
    "Location",
    "Navigator",
    "Node",
    "NodeList",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Text",
]

[features]
mobile_debug = []
dev_view = ["statistical"]
default = []
