[package]
name = "paddlers-frontend"
version = "0.2.1"
authors = ["Jakob Meier <inbox@jakobmeier.ch>"]
edition = "2018"
license = "MIT/Apache-2.0"
categories = ["wasm", "games"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
paddlers-shared-lib = { path = "../paddlers-shared-lib", features = ["enum_utils", "game_mechanics", "web"] }
# div = {path = "../div-rs" }
div = "0.3"
# nuts = { path = "../nuts", features = ["web-debug"] }
nuts = { version = "0.2.1", features = ["web-debug"] }
# paddle = { path = "../paddle", features = ["const_fn"] }
paddle = { version = "0.1.0-beta.1", features = ["const_fn"] }
specs = { version = "0.16.1", default-features = false } # parallel not supported in wasm
shred = { version = "0.10.2", default-features = false }
specs-derive = "0.4"
# graphql_client = "0.9"
graphql_client = { git="https://github.com/graphql-rust/graphql-client", commit = "da80b9af9a3d6787c8df8cd1201a3dbd3edcd078" }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
ron = { version = "0.6" }
strum = { version = "0.18" }
strum_macros = { version = "0.18" }
chrono = "0.4"
pathfinding = "2.0.4"
url = "2.1.1"
statistical = { version = "1.0", optional = true }
gettext = "0.4"
lyon = { version = "0.17", features = ["extra"] }
wasm-bindgen-futures = "0.4.19"
js-sys = "0.3.46"
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"]  }
mogwai = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "CssStyleDeclaration",
    "Document",
    "DomRect",
    "Element",
    "Headers",
    "HtmlCollection",
    "HtmlElement",
    "HtmlImageElement",
    "Location",
    "Navigator",
    "Node",
    "NodeList",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Text",
]

[features]
mobile_debug = []
dev_view = ["statistical"]
default = []
