[package]
name = "paddlers-game-master"
version = "0.1.1"
authors = ["Jakob Meier <inbox@jakobmeier.ch>"]
edition = "2018"

[dependencies]
paddlers-shared-lib = { path = "../paddlers-shared-lib", features = ["sql_db", "enum_utils", "game_mechanics", "user_authentication"] }
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2", "uuidv07"] }
uuid = "0.7.4" # Fixed version to work with diesel
r2d2 = "0.8"
chrono = "0.4"
rand = "0.7"
actix = "0.8.3"
actix-web = "1.0"
actix-cors = "0.1.0"
futures = "0.1"
serde = "1.0"
toml = "0.5"
env_logger = "0.7.1"
log = "0.4.8"
dotenv = "0.15.0"