[package]
name = "paddlers-game-master"
version = "0.2.0"
authors = ["Jakob Meier <inbox@jakobmeier.ch>"]
edition = "2018"

[dependencies]
paddlers-shared-lib = { path = "../paddlers-shared-lib", features = ["sql_db", "enum_utils", "game_mechanics", "user_authentication"] }
diesel = { version = "1.4.5", features = ["postgres", "chrono", "r2d2", "uuidv07"] }
uuid = { version = "0.8.1", features = ["v4"] }
r2d2 = "0.8"
chrono = "0.4"
rand = "0.7"
actix = "0.13.1"
actix-web = "4.4"
actix-cors = "0.6.4"
futures-util = "0.3.28"
serde = "1.0"
toml = "0.5"
env_logger = "0.7.1"
log = "0.4.8"
dotenv = "0.15.0"

[features]
local_test = []