[package]
name = "paddlers-shared-lib"
version = "0.1.0"
authors = ["Jakob Meier <inbox@jakobmeier.ch>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4", features = ["postgres", "chrono"], optional = true }
diesel-derive-enum = { version = "0.4", features = ["postgres"], optional = true }
diesel_migrations = "1.4"
dotenv = { version = "0.14", optional = true }
chrono = { version = "0.4", features = ["serde"] }

# For deriving
juniper = { version = "0.13", optional = true }
strum = { version = "0.15.0", optional = true }
strum_macros = { version = "0.15.0", optional = true }
serde = { version = "1.0", features = ["derive"] }

[features]
graphql = ["juniper", "chrono/serde"]
sql_db = ["diesel", "diesel-derive-enum", "dotenv", "chrono/serde"]
enum_utils = ["strum", "strum_macros"]
game_mechanics = []

default = []
