[package]
name = "paddlers-shared-lib"
version = "0.1.3"
authors = ["Jakob Meier <inbox@jakobmeier.ch>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "chrono", "uuidv07"], optional = true }
uuid = "0.8.1"
diesel-derive-enum = { version = "0.4", features = ["postgres"], optional = true }
diesel_migrations = "1.4"
dotenv = { version = "0.15", optional = true }
chrono = { version = "0.4", features = ["serde"] }
# Using old version of ring to avoid dependency conflict with Rocket 4.0 > cookie 11.0
jsonwebtoken = { version = "5.0.1", optional = true }
once_cell = { version = "1.3.1", optional = true }
stdweb = {version = "0.4.20", features = ["experimental_features_which_may_break_on_minor_version_bumps"], optional = true }
# stdweb = { git = "https://github.com/alvinhochun/stdweb", features = ["experimental_features_which_may_break_on_minor_version_bumps"], optional = true, rev="f492a459cdfd7d67ee3f2c657d4243ac73a45269" }

# For deriving
juniper = { version = "0.14.2", optional = true }
strum = { version = "0.18", optional = true }
strum_macros = { version = "0.18", optional = true }
serde = { version = "1.0", features = ["derive"] }

[features]
graphql = ["juniper", "chrono/serde"]
sql_db = ["diesel", "diesel-derive-enum", "dotenv", "chrono/serde"]
enum_utils = ["strum", "strum_macros"]
game_mechanics = []
user_authentication = ["jsonwebtoken", "once_cell"]
web = ["stdweb"]

default = []
