[package]
name = "specification-loader"
version = "0.1.0"
authors = ["jakmeier <jakmeier@student.ethz.ch>"]
edition = "2018"

[dependencies]
paddlers-shared-lib = { path = "../paddlers-shared-lib",  features = ["sql_db"] }
serde = { version = "1.0", features = ["derive"] }
ron = { version = "0.6" }
clap = "2.33"
diesel = { version = "1.4.5", features = ["postgres"] }
